# AntTracking

./: .gitignore  AntTracking.sln  CMakeLists.txt  README.md
AntTracking/: AntTracking.cpp  AntTracking.vcxproj  AntTracking.vcxproj.filters  ContourExtractor.cpp  ContourExtractor.h  FlannBasedTracker.cpp  FlannBasedTracker.h  ImagePreprocessor.cpp  ImagePreprocessor.h  ReadMe.txt  stdafx.cpp  stdafx.h
src/: AntTracking.cpp  ContourExtractor.cpp  CoordinateTranslator.cpp  CoordinateTranslator.h  FlannBasedTracker.cpp  FlannBasedTracker.h  ImagePreprocessor.cpp  ImagePreprocessor.h  ZmqSender.cpp  ZmqSender.h  ant.hpp
src/client/: AntClient.cpp  ZMQclient.cpp  ZMQclient.h
src/server/: AntServer.cpp
